messages d'erreur input, fermeture modale message de confirmation

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
           <div class="modal-body">
             <form
               name="reserve"
-              action="index.html"
-              method="POST"
+              id="form"
             >
               <div
                 class="formData">
@@ -200,12 +199,13 @@
                 </label>
                 <br>
               </div>
-              <input
+              <!-- <input
                 class="btn-submit"
                 type="submit"
                 class="button"
                 value="C'est parti"
-              />
+              /> -->
+              <button class="btn-submit button">C'est parti</button>
             </form>
           </div>
         </div>
