--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
         <div class="hero-img">
           <img src="./bg_img.jpg" alt="img" />
         </div>
-        <button class="btn-signup modal-btn">
-          je m'inscris
-        </button>
       </div>
 
       <div class="bground hide">
@@ -75,7 +72,7 @@
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" >
               </div>
-              <p class="text-label">Quelles villes ?</p>
+              <label>Quelles villes ?</label>
               <div class="formData checkboxes">
                 <input class="checkbox-input" type="radio" id="location1" name="location" value="New York"/>
                 <label class="checkbox-label" for="location1">
