correction messages d'erreurs

--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
           <div class="modal-body">
             <form name="reserve" id="form" method="POST" novalidate>
               <div class="formData">
-                <label for="first">Prénom</label><br>
+                <label for="first">Prénom</label>
                 <input class="text-control" type="text" id="first" name="first" />
               </div>
               <div class="formData">
-                <label for="last">Nom</label><br>
+                <label for="last">Nom</label>
                 <input class="text-control" type="text" id="last" name="last" />
               </div>
               <div class="formData">
-                <label for="email">E-mail</label><br>
+                <label for="email">E-mail</label>
                 <input class="text-control" type="email" id="email" name="email" >
               </div>
               <div class="formData">
-                <label for="birthdate">Date de naissance</label><br>
+                <label for="birthdate">Date de naissance</label>
                 <input class="text-control" type="date" id="birthdate" name="birthdate" />
               </div>
               <div class="formData">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" >
+                <input type="number" class="text-control" id="quantity" name="quantity" min=0 max=99 >
               </div>
               <label>Quelles villes ?</label>
               <div class="formData checkboxes">
@@ -99,7 +99,7 @@
                   Boston
                 </label>
                 <input class="checkbox-input" type="radio" id="location6" name="location" value="Portland"/>
-                <label class="checkbox-label" for="location6">
+                <label class="checkbox-label last-label" for="location6">
                   <span class="checkbox-icon"></span>
                   Portland
                 </label>
@@ -111,13 +111,15 @@
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
+              </div>
+              <div class="formData">
                 <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
                   Je souhaite être prévenu des prochains évènements.
                 </label>
               </div>
-              <input class="btn-submit button" type="submit" value="C'est parti" />
+              <input class="btn-submit button" type="submit" value="C'est parti" name="newsletter"/>
             </form>
           </div>
         </div>
